--- a/html.html
+++ b/html.html
@@ -5,11 +5,11 @@
 <meta name="description" content="Our first page">
 <meta charset="UTF-8">
 </head>
-<body onLoad="fetching()">
+<body>
     <h1>Weather APP</h1>
     <h2>Select Location</h2>
     <input id="locationSelection" type="text">
-    <button onclick="test()">Display</button>
+    <button onclick="fetching()">Display</button>
     <p id="temp"></p>
 
 </body>
