--- a/html.html
+++ b/html.html
@@ -1,16 +1,24 @@
 <!doctype html>
 <html>
+
 <head>
+<link rel="stylesheet" href="style.css">
 <title>Weather APP</title>
 <meta name="description" content="Our first page">
 <meta charset="UTF-8">
 </head>
-<body>
-    <h1>Weather APP</h1>
-    <h2>Select Location</h2>
-    <input id="locationSelection" type="text">
-    <button onclick="fetching()">Display</button>
-    <p id="temp"></p>
+<body id="body">
+    <div id="div">
+        <div id="content">
+            <h1>Weather APP</h1>
+            <h2>Select Location</h2>
+            <input id="locationSelection" type="text">
+            <button onclick="fetching()">Display</button>
+            <p id="temp"></p>
+        </div>
+
+    </div>
+
 
 </body>
 <script src="script.js"></script>
